<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity"
    android:background="@drawable/gradient_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation">


        <TextView
            android:id="@+id/create_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="151dp"
            android:text="@string/create_title_text_view"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_from_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="312dp"
            android:layout_marginRight="312dp"
            android:text="@string/create_from_title_text_view"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_title_text_view" />


        <Spinner
            android:id="@+id/create_from_cities_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_from_title_text_view"
            android:layout_marginRight="60dp" />

        <Spinner
            android:id="@+id/create_to_cities_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_to_title_text_view" />

        <TextView
            android:id="@+id/create_to_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="292dp"
            android:layout_marginRight="292dp"
            android:text="@string/create_to_title_text_view"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_from_cities_spinner" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="64dp" />

        <Button
            android:id="@+id/create_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/create_next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_to_cities_spinner" />

        <Button
            android:id="@+id/create_trip_date_picker_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginTop="60dp"
            android:text="@string/create_trip_date_picker_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_to_cities_spinner" />

        <TextView
            android:id="@+id/create_data_time_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="2dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/boleias_blue"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/create_trip_date_picker_button"
            app:layout_constraintStart_toEndOf="@+id/create_trip_date_picker_button"
            app:layout_constraintTop_toBottomOf="@+id/create_to_cities_spinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/rounded_nav"
        app:itemIconTint="@color/boleias_blue"
        app:itemTextColor="@color/boleias_blue"
        app:menu="@menu/menu_navigation"
        app:labelVisibilityMode="labeled" />



</RelativeLayout>